# backend-python

./: .dockerignore  .env  .env.example  .gitignore  Caddyfile  Dockerfile.dev  Makefile  README.md  alembic.ini  docker-compose.dev.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 2025_11_19_2211-bf26c644d9c6_initial.py
app/config/: container.py
app/infrastructure/api/: dependencies.py  main.py  middleware.py
app/infrastructure/api/routers/: health.py
app/infrastructure/database/: session.py
app/infrastructure/database/repositories/: sqlalchemy_repository.py
docs/: ADR-0001-fastapi-choice.md  system-overview.md
src/config/: settings.py
src/infrastructure/api/: main.py
src/infrastructure/api/routers/: health.py
src/infrastructure/database/: base.py  session.py
src/infrastructure/database/repositories/: sqlalchemy_repository.py
src/shared/: exceptions.py
src/shared/dto/: __init__.py  base_dto.py
src/shared/events/: __init__.py
src/shared/kernel/: base_repository.py  base_use_case.py
tests/: conftest.py
tests/e2e/: test_health.py  test_placeholder.py
tests/integration/: test_db_connection.py  test_db_placeholder.py
